--- a/index.html
+++ b/index.html
@@ -334,18 +334,42 @@
 
           <div class="text-img">
             <figure>
-              <img src="" alt="">
-              <figcaption></figcaption>
+              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/grupoProf.png?raw=true" alt="Registros da MESA REDONDA: SURUROTE - empreendedorismo local realizada pelo @mandaverorg na 1ª FEIRA DO LIVRO GAP">
+              <figcaption>Registros da MESA REDONDA: SURUROTE - empreendedorismo local realizada pelo @mandaverorg na 1ª FEIRA DO LIVRO GAP</figcaption>
             </figure>
-            <p></p>
+            <p>Trabalhamos em equipe multidisciplinar para resolver diversos problemas 
+              e contribuir para o Dossiê anual da Revista Digital DOCUMENTO HISTÓRICO. 
+              Willames de Santana Santos é o mentor, com formação em História e 
+              experiência em pesquisa sobre temas históricos. Juliana Ferreira dos 
+              Santos, também mentora, tem formação em Ciências Biológicas e se 
+              destaca em projetos de saúde pública e proteção de animais. Luciana Luz 
+              Ferreira, colaboradora, possui formação em Letras e Pedagogia, com 
+              experiência em educação especial, artes e avaliação de redações. 
+              Juntos, formamos uma equipe interdisciplinar dedicada à revista.</p>
           </div>
 
           <div class="text-img float">
             <figure>
-              <img src="" alt="">
-              <figcaption></figcaption>
+              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/grupoAlunos.png?raw=true" alt="Registros da oficina O ofício do Historiador e o trato com as fontes históricas">
+              <figcaption>Registros da oficina "O ofício do Historiador e o trato com as fontes históricas"</figcaption>
             </figure>
-            <p></p>
+            <p>
+              Já a equipe de Alunos-Pesquisadores, composta por estudantes do Ensino
+              Fundamental II e do Ensino Médio, desenvolvem novas aptidões de trabalho em equipe
+              e ampliam suas habilidades e competências. Entregam ao Grupo de Pesquisa produtos
+              como o slogan e toda identidade visual do grupo, gerem os perfis das redes sociais,
+              elaboram Cartas de Aceite, Cartas de Convite, Certificados e Editais de Concursos
+              de Desenhos. Engajam os alunos GAP na participação dos projetos executados,
+              ajudam na escrita de esboços de artigos científicos além de pesquisarem documentos
+              manuscritos e digitais.
+              Assim, sem nenhum financiamento público ou particular, o Grupo
+              de Pesquisa Histórica e Interdisciplinar Luiz Sávio de Almeida remou
+              contra a maré para se consolidar nesse pouco mais de um ano de
+              fundação, contribuindo para uma Educação libertadora e de qualidade .
+              Caso deseje conhecer um pouco mais sobre o nosso projeto você
+              pode nos encontrar no Instagram @gphilsa.gap ou através do E-mail
+              gphgap@gmail.com.
+            </p>
           </div>
 
          </section>
