--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
          </section>
          <section id="eventos" class="container">
-            <h2>Eventos</h2>
+            <h2>EVENTOS</h2>
             <div class="boxes-eventos">
                <div class="box-evento">
                   <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/caparevistaa.png?raw=true" alt="Concurso de desenho">
@@ -330,7 +330,7 @@
             </div>
          </section>
          <section id="integrantes" class="container">
-          <h2>Nosso Time</h2>
+          <h2>NOSSO TIME</h2>
 
           <div class="text-img">
             <figure>
@@ -350,7 +350,7 @@
 
           <div class="text-img float">
             <figure>
-              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/grupoAlunos.png?raw=true" alt="Registros da oficina O ofício do Historiador e o trato com as fontes históricas">
+              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/grupoAlunoss.png?raw=true" alt="Registros da oficina O ofício do Historiador e o trato com as fontes históricas">
               <figcaption>Registros da oficina "O ofício do Historiador e o trato com as fontes históricas"</figcaption>
             </figure>
             <p>
@@ -373,6 +373,23 @@
           </div>
 
          </section>
+         <section id="revista" class="container">
+          <h2>REVISTA DIGITAL DOCUMENTO HISTÓRICA</h2>
+          <div class="revistas">
+            <div class="edicao">
+              <a href="https://drive.google.com/file/d/12B4GdoT3FYEVcyK79j6htlZCoixtggsX/view?usp=drivesdk" target="_blank" rel="noopener noreferrer">
+              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/capadarevistadigital.png?raw=true" alt="Primeira edição documento historico">
+              <h3>1° Edição</h3>
+            </a>
+            </div>
+            <div class="edicao">
+              <a href="https://drive.google.com/file/d/12iI9RkYhyZSOdsmUdZUDKK3E9XnUOAQN/view?usp=drivesdk" target="_blank" rel="noopener noreferrer">
+              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/segundaEdi%C3%A7%C3%A3oDaRevista.png?raw=true" alt="">
+              <h3>RESENHA: 2° Edição</h3>
+            </a>
+            </div>
+          </div>
+         </section>
       </main>
       <footer>
          <div class="footer-container">
@@ -384,7 +401,7 @@
                   <li><a href="mailto:gphgap@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i>E-mail: gphgap@gmail.com</a></li>
                </ul>
             </div>
-            <img src="" alt="logo do GPHLSA-GAP">
+            <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/logoGPHLSA-GAP.png?raw=true" alt="logo do GPHLSA-GAP">
          </div>
          <p>© GPHILSA-GAP . 2023 All rigths reserved</p>
       </footer>
