--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             nas escolas publicas das periferias de Maceió. Produzindo 
             ciência e estudantes pesquisadores...
          </p>
-         <a href="https://drive.google.com/file/d/12B4GdoT3FYEVcyK79j6htlZCoixtggsX/view?usp=drivesdk" target="_blank"><i class="fa-solid fa-book-open"></i> Ler Ultima Edição Da Revista Documento Historico</a>
+         <a href="https://medium.com/@willames.santos/reading-list" target="_blank"><i class="fa-solid fa-book-open"></i> Leia Nossos Artigos</a>
          
       </header>
       <main>
@@ -383,7 +383,7 @@
             </a>
             </div>
             <div class="edicao">
-              <a href="https://drive.google.com/file/d/12iI9RkYhyZSOdsmUdZUDKK3E9XnUOAQN/view?usp=drivesdk" target="_blank" rel="noopener noreferrer">
+              <a href="#home">
               <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/segundaEdi%C3%A7%C3%A3oDaRevista.png?raw=true" alt="">
               <h3>RESENHA: 2° Edição</h3>
             </a>
