--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
             </a>
             </div>
             <div class="edicao">
-              <a href="#home">
-              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/segundaEdi%C3%A7%C3%A3oDaRevista.png?raw=true" alt="">
-              <h3>RESENHA: 2° Edição</h3>
+              <a href="#revista" style="cursor: not-allowed;">
+              <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/segundaEdi%C3%A7%C3%A3oBREVE.png?raw=true" alt="Segunda edição da revista em breve">
+              <h3>2° Edição</h3>
             </a>
             </div>
           </div>
