--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             nas escolas publicas das periferias de Maceió. Produzindo 
             ciência e estudantes pesquisadores...
          </p>
-         <a href="https://medium.com/@willames.santos/reading-list" target="_blank"><i class="fa-solid fa-book-open"></i> Leia Nossos Artigos</a>
+         <a href="https://drive.google.com/drive/folders/133rsqw1GEnfTLh3jCr6cLPQ6R1def9M5" target="_blank"><i class="fa-solid fa-book-open"></i>LEIA NOSSAS PRODUÇÕES</a>
          
       </header>
       <main>
@@ -327,6 +327,22 @@
                      de toda a comunidade escolar.
                   </p>
                </div>
+               <div class="box-evento">
+                  <img src="" alt="exposição dos projetos cientificos dos alunos">
+                  <h3>EXPOCIÊNCIA</h3>
+                  <p> 
+                     Conhecendo a Terra em seu núcleo e espaço.
+                     O Projeto teve como principal objetivo 
+                     desenvolver a aprendizagem usando a 
+                     criatividade dos estudantes na construção de 
+                     maquetes. Os alunos fizeram a exposição das 
+                     maquetes na escola, onde desempenhou um 
+                     papel fundamental no processo educacional, pois 
+                     oferece a oportunidade única de aprender de 
+                     forma prática e tangíve
+                  </p>
+               </div>
+
             </div>
          </section>
          <section id="integrantes" class="container">
