--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                   </p>
                </div>
                <div class="box-evento">
-                  <img src="" alt="exposição dos projetos cientificos dos alunos">
+                  <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/expociencia.jpeg?raw=true" alt="exposição dos projetos cientificos dos alunos">
                   <h3>EXPOCIÊNCIA</h3>
                   <p> 
                      Conhecendo a Terra em seu núcleo e espaço.
